{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 26,
  "lineage": "e1d10872-076b-cb09-75c4-34f86a3337f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testgitinfra3-INSTANCE-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091b37bfd6e01db4f",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-047eddb45e017a4c2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047eddb45e017a4c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "COLIN-KEYPAIR",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-019db54b5b92bb225",
            "private_dns": "ip-10-0-2-67.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00ef49f578adba981",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031914d2d1c484426",
            "tags": {
              "Name": "testgitinfra3-INSTANCE-AZ-A"
            },
            "tags_all": {
              "Name": "testgitinfra3-INSTANCE-AZ-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02bb3d29370624c1a"
            ]
          },
          "dependencies": [
            "aws_instance.testgitinfra3-INSTANCE-PUBLIC",
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_security_group.testgitinfra3-SG-PUBLIC",
            "aws_security_group.testgitinfra3-SG-WEB",
            "aws_subnet.testgitinfra3-SUBNET-AZ-A",
            "aws_subnet.testgitinfra3-SUBNET-PUBLIC",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testgitinfra3-INSTANCE-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091b37bfd6e01db4f",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-09a83d34b17e4752e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a83d34b17e4752e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "COLIN-KEYPAIR",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02819c48e16d55987",
            "private_dns": "ip-10-0-3-82.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ca406d141bc2b45",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eca56fa63c0b801d",
            "tags": {
              "Name": "testgitinfra3-INSTANCE-AZ-B"
            },
            "tags_all": {
              "Name": "testgitinfra3-INSTANCE-AZ-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02bb3d29370624c1a"
            ]
          },
          "dependencies": [
            "aws_instance.testgitinfra3-INSTANCE-PUBLIC",
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_security_group.testgitinfra3-SG-PUBLIC",
            "aws_security_group.testgitinfra3-SG-WEB",
            "aws_subnet.testgitinfra3-SUBNET-AZ-B",
            "aws_subnet.testgitinfra3-SUBNET-PUBLIC",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testgitinfra3-INSTANCE-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091b37bfd6e01db4f",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-07b8de599b2fea7f2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b8de599b2fea7f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "COLIN-KEYPAIR",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e544c071e9851f15",
            "private_dns": "ip-10-0-4-60.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e7a293e689bc9859",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef5be2e734c79b30",
            "tags": {
              "Name": "testgitinfra3-INSTANCE-AZ-C"
            },
            "tags_all": {
              "Name": "testgitinfra3-INSTANCE-AZ-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02bb3d29370624c1a"
            ]
          },
          "dependencies": [
            "aws_instance.testgitinfra3-INSTANCE-PUBLIC",
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_security_group.testgitinfra3-SG-PUBLIC",
            "aws_security_group.testgitinfra3-SG-WEB",
            "aws_subnet.testgitinfra3-SUBNET-AZ-C",
            "aws_subnet.testgitinfra3-SUBNET-PUBLIC",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testgitinfra3-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091b37bfd6e01db4f",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0bddbd5880f2a4849",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bddbd5880f2a4849",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "COLIN-KEYPAIR",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096fbeb6edeb118c5",
            "private_dns": "ip-10-0-1-211.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_ip": "13.38.89.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-089835712a0dfd1b3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c388ec296238454f",
            "tags": {
              "Name": "testgitinfra3-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "testgitinfra3-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2047b68e9283f9f"
            ]
          },
          "dependencies": [
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_security_group.testgitinfra3-SG-PUBLIC",
            "aws_security_group.testgitinfra3-SG-WEB",
            "aws_subnet.testgitinfra3-SUBNET-PUBLIC",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testgitinfra3-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-0558ff18d2b9740f5",
            "id": "igw-0558ff18d2b9740f5",
            "owner_id": "962615889483",
            "tags": {
              "Name": "testgitinfra3-IGW"
            },
            "tags_all": {
              "Name": "testgitinfra3-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "testgitinfra3-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:loadbalancer/app/testgitinfra3-LB/241747d46cc6ff9a",
            "arn_suffix": "app/testgitinfra3-LB/241747d46cc6ff9a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "testgitinfra3-LB-609343152.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:loadbalancer/app/testgitinfra3-LB/241747d46cc6ff9a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "testgitinfra3-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02d1a231fd55d6b14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-031914d2d1c484426"
              },
              {
                "subnet_id": "subnet-0eca56fa63c0b801d"
              },
              {
                "subnet_id": "subnet-0ef5be2e734c79b30"
              }
            ],
            "subnets": [
              "subnet-031914d2d1c484426",
              "subnet-0eca56fa63c0b801d",
              "subnet-0ef5be2e734c79b30"
            ],
            "vpc_id": "vpc-04ee23cf7865d738f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_subnet.testgitinfra3-SUBNET-AZ-A",
            "aws_subnet.testgitinfra3-SUBNET-AZ-B",
            "aws_subnet.testgitinfra3-SUBNET-AZ-C",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "testgitinfra3-LB-LISTENER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:listener/app/testgitinfra3-LB/241747d46cc6ff9a/1cbbcb1060411924",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:listener/app/testgitinfra3-LB/241747d46cc6ff9a/1cbbcb1060411924",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:loadbalancer/app/testgitinfra3-LB/241747d46cc6ff9a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.testgitinfra3-LB",
            "aws_lb_target_group.testgitinfra3-LB-TG2",
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_subnet.testgitinfra3-SUBNET-AZ-A",
            "aws_subnet.testgitinfra3-SUBNET-AZ-B",
            "aws_subnet.testgitinfra3-SUBNET-AZ-C",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testgitinfra3-LB-TG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7",
            "arn_suffix": "targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "testgitinfra3-LB-TG2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ee23cf7865d738f"
          },
          "dependencies": [
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "testgitinfra3-LB-TG2-ATTACH-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7-2023092209195661860000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7",
            "target_id": "i-047eddb45e017a4c2"
          },
          "dependencies": [
            "aws_instance.testgitinfra3-INSTANCE-AZ-A",
            "aws_instance.testgitinfra3-INSTANCE-PUBLIC",
            "aws_lb_target_group.testgitinfra3-LB-TG2",
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_security_group.testgitinfra3-SG-PUBLIC",
            "aws_security_group.testgitinfra3-SG-WEB",
            "aws_subnet.testgitinfra3-SUBNET-AZ-A",
            "aws_subnet.testgitinfra3-SUBNET-PUBLIC",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "testgitinfra3-LB-TG2-ATTACH-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7-20230922091946597000000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7",
            "target_id": "i-09a83d34b17e4752e"
          },
          "dependencies": [
            "aws_instance.testgitinfra3-INSTANCE-AZ-B",
            "aws_instance.testgitinfra3-INSTANCE-PUBLIC",
            "aws_lb_target_group.testgitinfra3-LB-TG2",
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_security_group.testgitinfra3-SG-PUBLIC",
            "aws_security_group.testgitinfra3-SG-WEB",
            "aws_subnet.testgitinfra3-SUBNET-AZ-B",
            "aws_subnet.testgitinfra3-SUBNET-PUBLIC",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "testgitinfra3-LB-TG2-ATTACH-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7-20230922091946528300000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:962615889483:targetgroup/testgitinfra3-LB-TG2/7f88e41e06034fe7",
            "target_id": "i-07b8de599b2fea7f2"
          },
          "dependencies": [
            "aws_instance.testgitinfra3-INSTANCE-AZ-C",
            "aws_instance.testgitinfra3-INSTANCE-PUBLIC",
            "aws_lb_target_group.testgitinfra3-LB-TG2",
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_security_group.testgitinfra3-SG-PUBLIC",
            "aws_security_group.testgitinfra3-SG-WEB",
            "aws_subnet.testgitinfra3-SUBNET-AZ-C",
            "aws_subnet.testgitinfra3-SUBNET-PUBLIC",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "testgitinfra3-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-07bb091f928d10440",
            "id": "rtb-07bb091f928d10440",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0558ff18d2b9740f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testgitinfra3-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "testgitinfra3-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee23cf7865d738f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.testgitinfra3-IGW",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testgitinfra3-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095ce90119e012a1c",
            "route_table_id": "rtb-07bb091f928d10440",
            "subnet_id": "subnet-0c388ec296238454f"
          },
          "dependencies": [
            "aws_internet_gateway.testgitinfra3-IGW",
            "aws_route_table.testgitinfra3-RTB-PUBLIC",
            "aws_subnet.testgitinfra3-SUBNET-PUBLIC",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testgitinfra3-RTB-PUBLIC-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac8d383a8e04829d",
            "route_table_id": "rtb-07bb091f928d10440",
            "subnet_id": "subnet-031914d2d1c484426"
          },
          "dependencies": [
            "aws_internet_gateway.testgitinfra3-IGW",
            "aws_route_table.testgitinfra3-RTB-PUBLIC",
            "aws_subnet.testgitinfra3-SUBNET-AZ-A",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testgitinfra3-RTB-PUBLIC-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bebc160936001de",
            "route_table_id": "rtb-07bb091f928d10440",
            "subnet_id": "subnet-0eca56fa63c0b801d"
          },
          "dependencies": [
            "aws_internet_gateway.testgitinfra3-IGW",
            "aws_route_table.testgitinfra3-RTB-PUBLIC",
            "aws_subnet.testgitinfra3-SUBNET-AZ-B",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testgitinfra3-RTB-PUBLIC-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05330900ac4663435",
            "route_table_id": "rtb-07bb091f928d10440",
            "subnet_id": "subnet-0ef5be2e734c79b30"
          },
          "dependencies": [
            "aws_internet_gateway.testgitinfra3-IGW",
            "aws_route_table.testgitinfra3-RTB-PUBLIC",
            "aws_subnet.testgitinfra3-SUBNET-AZ-C",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testgitinfra3-SG-LOAD-BALANCER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-02d1a231fd55d6b14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d1a231fd55d6b14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922091857866700000001",
            "name_prefix": "terraform-",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testgitinfra3-SG-LOAD-BALANCER"
            },
            "tags_all": {
              "Name": "testgitinfra3-SG-LOAD-BALANCER"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee23cf7865d738f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testgitinfra3-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0e2047b68e9283f9f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2047b68e9283f9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bb3d29370624c1a"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "name": "terraform-20230922091901017800000003",
            "name_prefix": "terraform-",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testgitinfra3-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "testgitinfra3-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee23cf7865d738f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_security_group.testgitinfra3-SG-WEB",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "testgitinfra3-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-02bb3d29370624c1a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bb3d29370624c1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d1a231fd55d6b14"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922091859470700000002",
            "name_prefix": "terraform-",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testgitinfra3-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "testgitinfra3-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee23cf7865d738f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.testgitinfra3-SG-LOAD-BALANCER",
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testgitinfra3-SUBNET-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-031914d2d1c484426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031914d2d1c484426",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testgitinfra3-SUBNET-AZ-A"
            },
            "tags_all": {
              "Name": "testgitinfra3-SUBNET-AZ-A"
            },
            "vpc_id": "vpc-04ee23cf7865d738f"
          },
          "dependencies": [
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testgitinfra3-SUBNET-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0eca56fa63c0b801d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eca56fa63c0b801d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testgitinfra3-SUBNET-AZ-B"
            },
            "tags_all": {
              "Name": "testgitinfra3-SUBNET-AZ-B"
            },
            "vpc_id": "vpc-04ee23cf7865d738f"
          },
          "dependencies": [
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testgitinfra3-SUBNET-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0ef5be2e734c79b30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef5be2e734c79b30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testgitinfra3-SUBNET-AZ-C"
            },
            "tags_all": {
              "Name": "testgitinfra3-SUBNET-AZ-C"
            },
            "vpc_id": "vpc-04ee23cf7865d738f"
          },
          "dependencies": [
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testgitinfra3-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0c388ec296238454f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c388ec296238454f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testgitinfra3-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "testgitinfra3-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-04ee23cf7865d738f"
          },
          "dependencies": [
            "aws_vpc.testgitinfra3-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testgitinfra3-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-04ee23cf7865d738f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9a8c1e344e03fd1",
            "default_route_table_id": "rtb-08b1c714aa790a723",
            "default_security_group_id": "sg-03b08a9adf2994185",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ee23cf7865d738f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b1c714aa790a723",
            "owner_id": "962615889483",
            "tags": {
              "Name": "testgitinfra3-VPC"
            },
            "tags_all": {
              "Name": "testgitinfra3-VPC"
            }
          }
        }
      ]
    }
  ]
}